--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
   "author": "Jason Williscroft",
-  "bin": {
-    "mycli": "./dist/cli/mycli/index.js"
-  },
   "bugs": {
-    "url": "https://github.com/karmaniverous/npm-package-template-ts/issues"
+    "url": "https://github.com/karmaniverous/dynamodb-local/issues"
   },
   "dependencies": {
-    "commander": "^12.1.0"
+    "@aws-sdk/client-dynamodb": "^3.682.0",
+    "dockerode": "^4.0.2",
+    "radash": "^12.1.0"
   },
-  "description": "A feature-rich NPM package template for TypeScript projects.",
+  "description": "dockerode + dynamodb local = <3",
   "devDependencies": {
-    "@commander-js/extra-typings": "^12.1.0",
     "@dotenvx/dotenvx": "^1.14.2",
     "@eslint/js": "^9.11.1",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
-    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.0",
     "@types/chai": "^5.0.0",
+    "@types/dockerode": "^3.3.31",
     "@types/eslint__js": "^8.42.3",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-mocha": "^10.4.0",
-    "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10.0.8",
     "@types/node": "^22.7.4",
     "auto-changelog": "^2.5.0",
@@ -34,7 +31,6 @@
     "eslint-plugin-mocha": "^10.5.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-tsdoc": "^0.3.0",
-    "fs-extra": "^11.2.0",
     "jsdom-global": "^3.0.2",
     "knip": "^5.30.6",
     "lefthook": "^1.7.18",
@@ -69,7 +65,7 @@
   "files": [
     "dist"
   ],
-  "homepage": "https://github.com/karmaniverous/npm-package-template-ts#readme",
+  "homepage": "https://github.com/karmaniverous/dynamodb-local#readme",
   "keywords": [
     "chai",
     "eslint",
@@ -85,7 +81,7 @@
   "license": "BSD-3-Clause",
   "main": "dist/cjs/index.js",
   "module": "dist/mjs/index.js",
-  "name": "@karmaniverous/npm-package-template-ts",
+  "name": "@karmaniverous/dynamodb-local",
   "publishConfig": {
     "access": "public"
   },
@@ -121,7 +117,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/karmaniverous/npm-package-template-ts.git"
+    "url": "git+https://github.com/karmaniverous/dynamodb-local.git"
   },
   "scripts": {
     "build": "rimraf dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
@@ -135,5 +131,5 @@
   },
   "type": "module",
   "types": "dist/index.d.ts",
-  "version": "0.6.12"
+  "version": "0.0.0"
 }
